Fixat ljus, lagt till en pil som signalerar vart man ska gå när knappen trycks (förtydligande). Lagt till ett rim som går från soffrumet till förlängningssladdsrummet. BAKAT LJUS. Lightmaps inkluderade (se till att de kommer med). Småfix med möbler, skuggor, osv.

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,8 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+Anneli Downloads/README.md
+Anneli Downloads/SourceTreeSetup-3.4.4.exe
+Anneli Downloads/UnityDownloadAssistant-2019.4.19f1.exe
+Anneli Downloads/UnityHubSetup (1).exe
+Anneli Downloads/UnityHubSetup.exe
